remove trailing text and only keep DPI number, add createLst method to create NUL-separated list for img2pdf --from-file, fix tests